# jellyfin-format-media-organizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCS.md  Dockerfile  LICENSE  Makefile  README.md  config.template.yaml  docker-compose.template.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
dev/: setup_test_env.sh
jfmo/: __init__.py  __main__.py  cli.py  config.py  daemon.py  main.py  setup.py
jfmo/detectors/: __init__.py  media_type.py  quality.py  season_episode.py  year.py
jfmo/metadata/: __init__.py  tmdb.py
jfmo/processors/: __init__.py  directory_processor.py  media_processor.py  movie_processor.py  series_processor.py
jfmo/utils/: __init__.py  colors.py  config_file.py  file_ops.py  filename_formatter.py  incomplete_checker.py  interactive_ui.py  logger.py  output_formatter.py  tmdb_cache.py  transliteration.py
models/: jfmo_russian_model.pkl
notebooks/: JFMO_dataset_creation.ipynb  JFMO_model_training.ipynb
src/: jfmo.sh  media-format-jellyfin-organizer.sh
src/jfmo/: __init__.py  cli.py  config.py  daemon.py  di.py  exceptions.py  formatter.py
src/jfmo/metadata/: __init__.py  tmdb.py
src/jfmo/parser/: __init__.py  context.py  parser.py  protocol.py  tokens.py
src/jfmo/parser/steps/: __init__.py  codec.py  episode.py  extension.py  hdr.py  media_type.py  quality.py  release_group.py  season.py  service.py  source.py  title.py  year.py
src/jfmo/processors/: __init__.py  movie_processor.py  result.py  tv_processor.py
src/jfmo/transliteration/: __init__.py  core.py
src/jfmo/utils/: __init__.py  cli_output.py  token_formatter.py
src/jfmo/utils/fs/: __init__.py  file_ops.py  file_stability_tracker.py
test/: jfmo_test.sh  media-format-jellyfin-organizer-test.sh
tests/: conftest.py  test_cli.py  test_config_file.py  test_parser_steps.py  test_token_formatter.py
tests/e2e/: conftest.py  test_formatter_directory.py  test_formatter_file.py  test_stress.py
tests/integration/: test_movie_processor.py  test_tv_processor.py
tests/unit/: test_daemon.py  test_file_stability_tracker.py
train/: JFMO_en_ru_model.ipynb
