[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jfmo"
version = "2.0.0"
description = "Jellyfin Format Media Organizer"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "StafLoker", email = "dev.stafloker@gmail.com"},
]
keywords = ["jellyfin", "media", "organizer", "tmdb", "transliteration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "transliterate>=1.10.0",
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://github.com/StafLoker/jellyfin-format-media-organizer"
"Bug Tracker" = "https://github.com/StafLoker/jellyfin-format-media-organizer/issues"

[project.scripts]
jfmo = "jfmo.__main__:main"

[tool.setuptools]
packages = ["jfmo"]

[tool.setuptools.package-data]
jfmo = ["**/*.py", "**/*.json"]