[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jfmo"
version = "3.0.0"
description = "Jellyfin Format Media Organizer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
authors = [
    {name = "StafLoker", email = "dev.stafloker@gmail.com"},
]
keywords = ["jellyfin", "media", "organizer", "tmdb", "transliteration"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
    "transliterate>=1.10.2",
    "requests>=2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/StafLoker/jellyfin-format-media-organizer"
"Bug Tracker" = "https://github.com/StafLoker/jellyfin-format-media-organizer/issues"

[project.scripts]
jfmo = "jfmo.__main__:main"

[tool.setuptools]
packages = ["jfmo", "jfmo.detectors", "jfmo.metadata", "jfmo.processors", "jfmo.utils"]

[tool.setuptools.package-data]
jfmo = ["**/*.py", "**/*.pkl"]