[project]
name = "jfmo"
version = "3.0.0"
description = "Jellyfin Format Media Organizer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0" }
authors = [{ name = "StafLoker", email = "dev.stafloker@gmail.com" }]
keywords = ["jellyfin", "media", "organizer", "tmdb", "transliteration"]
dependencies = [
    "loguru>=0.7.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "transliterate>=1.10.2",
]

[project.urls]
Homepage = "https://github.com/StafLoker/jellyfin-format-media-organizer"
"Bug Tracker" = "https://github.com/StafLoker/jellyfin-format-media-organizer/issues"

[project.scripts]
jfmo = "jfmo:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"


# ── Dependencies ──────────────────────────────────────────────────────────────

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

# ── Ruff (linter & formatter) ─────────────────────────────────────────────────

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable pycodestyle (E/W), pyflakes (F), isort (I), and other common rules
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
]

# Ignore specific rules that might be too strict
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults
    "ARG002", # Unused method argument
]

fixable = ["ALL"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending
line-ending = "auto"

[tool.ruff.lint.isort]
# Use a single line for imports from the same package
combine-as-imports = true
force-wrap-aliases = true
